# Numerical-methods

Integral/: CMakeLists.txt  integral.txt  main.cpp
MHK/: CMakeLists.txt  Gauss.cpp  Gauss.h  main.cpp  matrix.cpp  matrix.h  mhk.txt  plotter.cpp  plotter.h
differencation/: main.cpp
lagrange_newtone/: CMakeLists.txt  func.cpp  func.h  main.cpp  plotter.cpp  plotter.h
spline_interpolation/: CMakeLists.txt  main.cpp  plotter.cpp  plotter.h  spline.cpp  spline.h
taylor/: main.cpp
